# nixos-config

./: .gitattributes  .gitignore  .gitleaks.toml  .semgrep.yml  .semgrepignore  LICENSE  README.md  bootstrap.sh  flake.nix
.github/workflows/: secret-scan.yml
apps/edgebar/: index.html  package.json  pnpm-lock.yaml
apps/edgebar/src/: main.ts  styles.css
apps/edgebar/src-tauri/: Cargo.toml  build.rs  config.default.json  palette.default.json  tauri.conf.json
apps/edgebar/src-tauri/capabilities/: default.json
apps/edgebar/src-tauri/src/: lib.rs  main.rs
docs/: SECRETS.md
hardware/: msi-laptop.nix
home/: ambxst.nix  custom-shell.nix  dev-tools.nix  firefox.nix  home.nix  hyprland.nix  hyprlock.nix  media-player.nix  neovim.nix  shell.nix  terminals.nix  tmux.nix  wallpapers.nix
hosts/msi-laptop/: configuration.nix  hardware-configuration.nix  home.nix
modules/: audio.nix  fan-control.nix  nvidia.nix
modules/flake/: agenix.nix  git-hooks.nix  parts.nix
modules/home/: base.nix
modules/home/apps/: comma.nix  cursor.nix  firefox.nix  fonts.nix  git.nix  nh.nix  spotify.nix  sql-formatter.nix  ssh.nix
modules/home/darwin/: aerospace.nix  bar-geometry.nix  edgebar.nix  karabiner.nix  sketchybar.nix  skhd.nix  wallpaper.nix  yabai.nix
modules/home/desktop/: ambxst.nix  custom-shell.nix  hyprland.nix  hyprlock.nix  media-player.nix  wallpapers.nix
modules/home/nvim/: default.nix
modules/home/shell/: aliases.nix  env.nix  functions.nix  local.zsh.example  starship.nix  tools.nix  zsh.nix
modules/home/terminals/: ghostty.nix  kitty.nix  tmux.nix
modules/hosts/: brett-m1-mbp.nix  brett-msi-laptop.nix
modules/profiles/: base.nix  code.nix  gaming.nix  work.nix
modules/system/darwin/: common.nix  defaults.nix  homebrew.nix  nh-gc.nix  tailscale.nix  timemachine.nix  users.nix  window-manager.nix  (+1 more)
quickshell/: shell.qml
quickshell/bar/: Clock.qml  Workspaces.qml
quickshell/matugen/: config.toml
(+143 files in other folders)
