[package]
name = "edgebar"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "edgebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# System metrics for the notch's Metrics view (CPU/RAM/disk/swap). Pure Rust,
# cross-platform; sampled on demand only while the notch is open (lazy poll).
sysinfo = "0.33"

# Native macOS: NSWindow collection behavior (Stationary, via raw msg_send) and
# the native frame window drawn with CALayer/CAShapeLayer (no webview). All
# pinned to the 0.3 objc2 ecosystem already in the tree via tao/wry.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSGeometry",
  "NSString",
  "NSNotification",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSResponder",
  "NSView",
  "NSColor",
  "NSScreen",
  "NSBezierPath",
  "NSGraphics",
  "NSWorkspace",
  "NSRunningApplication",
  "NSImage",
  "NSImageRep",
  "NSBitmapImageRep",
] }
objc2-quartz-core = { version = "0.3", features = [
  "CALayer",
  "CAShapeLayer",
  "objc2-core-foundation",
] }
objc2-core-graphics = { version = "0.3", features = ["CGColor", "CGPath"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }

